[package]
name = "import-profit-radar"
version = "0.1.0"
description = "Local-first cross-border product profit radar"
authors = ["跨境利通"]
edition = "2021"

[lib]
name = "import_profit_radar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
